crates/ruff_python_formatter/src/snapshots/ruff_python_formatter__tests__ruff_test__expression__string_py.snap
---
source: crates/ruff_python_formatter/src/lib.rs
expression: snapshot
---
## Input
```py
"' test"
'" test'

"\" test"
'\' test'

# Prefer single quotes for string with more double quotes
"' \" \" '' \" \" '"

# Prefer double quotes for string with more single quotes
'\' " " \'\' " " \''

# Prefer double quotes for string with equal amount of single and double quotes
'" \' " " \'\''
"' \" '' \" \" '"

"\\' \"\""
'\\\' ""'


u"Test"
U"Test"

r"Test"
R"Test"

'This string will not include \
backslashes or newline characters.'

if True:
    'This string will not include \
        backslashes or newline characters.'

"""Multiline
String \"
"""

'''Multiline
String \'
'''

'''Multiline
String ""
'''

'''Multiline
String """
'''

'''Multiline
String \"\"\"
'''
```



## Output
```py
"' test"
'" test'

'" test'
"' test"

# Prefer single quotes for string with more double quotes
"' \" \" '' \" \" '"

# Prefer double quotes for string with more single quotes
"' \" \" '' \" \" '"

# Prefer double quotes for string with equal amount of single and double quotes
"\" ' \" \" ''"
"' \" '' \" \" '"

'\\\' ""'
'\\\' ""'


"Test"
"Test"

r"Test"
R"Test"

"This string will not include \
backslashes or newline characters."

if True:
    "This string will not include \
        backslashes or newline characters."

"""Multiline
String \"
"""

"""Multiline
String \'
"""

"""Multiline
String ""
"""

'''Multiline
String """
'''

"""Multiline
String \"\"\"
"""
```


